--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,100 @@
+# This configuration file is adopted from the theme minimal-mistakes-jekyll
+# github pages: mmistakes/miminal-mmistakes
+
+# Theme settings
+theme: minimal-mistakes-jekyll
+minimal_mistakes_skin: "air"  # "default", "air", "auqa", "contrast", "dark", "dirt", "mint", "plum", "sunrise"
+
+# site settings
+locale                          : "en-US"
+title                           : "Yuru's blog"
+title_separator                 :  "|"
+subtitle                        : #
+email                           : your-email@example.com
+name                            : "Yuru Liu"
+description                     : "An amazing website."
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
+# twitter_username: jekyllrb
+github_username                 :  "Yliu566"
+search                          : true
+breadcrumbs                     : true
+teaser                          : #path of fallback e
+
+include:
+  - _pages
+
+# Plugins (previously gems:)
 plugins:
-  - jekyll-feed
-  - jekyll-sitemap
   - jekyll-seo-tag
+  - jekyll-paginate
+  - jekyll-sitemap
+  - jekyll-gist
+  - jekyll-feed
+  - jekyll-include-cache
+
+# mimic GitHub Pages with --safe
+whitelist:
+  - jekyll-paginate
+  - jekyll-sitemap
+  - jekyll-gist
+  - jekyll-feed
+  - jekyll-include-cache
+
+author:
+  name      : "Yuru Liu"
+  avatar    : "/assets/images/avatar.png"
+  bio       : "Currently a PhD student majored in chemistry @rcclab-fse-rug"
+  location  : "Groningen, NL"
+  # links:
+  #   - label: "Website"
+  #     icon: "fas fa-fw fa-link"
+  #     url: "https://"
+  #   - label: "Twitter"
+  #     icon: "fab fa-fw fa-twitter-square"
+  #     url: "https://twitter.com/"
+  #   - label: "GitHub"
+  #     icon: "fab fa-fw fa-github"
+  #     url: "https://github.com/"
+  #   - label: "Instagram"
+  #     icon: "fab fa-fw fa-instagram"
+  #     url: "https://instagram.com/"
+
+# footer:
+#   links:
+#     - label: "Twitter"
+#       icon: "fab fa-fw fa-twitter-square"
+#       url: "https://twitter.com/"
+#     - label: "GitHub"
+#       icon: "fab fa-fw fa-github"
+#       url: "https://github.com/"
+#     - label: "Instagram"
+#       icon: "fab fa-fw fa-instagram"
+#       url: "https://instagram.com/"
+
+defaults:
+  # _posts
+  - scope:
+      path: ""
+      type: posts
+    values:
+      layout: single
+      author_profile: true
+      read_time: true
+      comments: true
+      share: true
+      related: true
+  # _pages
+  - scope:
+      path: "_pages"
+      type: pages
+    values:
+      layout: single
+      author_profile: true
+
+category_archive:
+  type: liquid
+  path: /categories/
+tag_archive:
+  type: liquid
+  path: /tags/
