--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,11 @@
-- name: Home
-  link: /
-- name: About
-  link: /about.html
-- name: Blog
-  link: /blog.html
+main:
+  # - title: "Home"
+  #   url: /
+  - title: "Posts"
+    url: /posts/
+  - title: "Categories"
+    url: /categories/
+  - title: "Tags"
+    url: /tags/
+  - title: "About"
+    url: /about/
