this time add gitignore, see if it works

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 # Theme settings
 theme: minimal-mistakes-jekyll
 remote_theme           : "mmistakes/minimal-mistakes"
-minimal_mistakes_skin: "air"  # "default", "air", "auqa", "contrast", "dark", "dirt", "mint", "plum", "sunrise"
+minimal_mistakes_skin: "default"  # "default", "air", "auqa", "contrast", "dark", "dirt", "mint", "plum", "sunrise"
 
 # site settings
 locale                          : "en-US"
