--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 main:
   - title: "Home"
     url: /
-  - title: "Posts"
+  - title: "Blog Posts"
     url: /posts/
   - title: "Categories"
     url: /categories/
